--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cloc": "^2.1.0",
     "compression": "^1.6.2",
     "connect": "^3.5.0",
     "d3": "^4.4.0",
