--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cloc": "^2.1.0",
     "compression": "^1.6.2",
     "connect": "^3.5.0",
+    "connect-flash": "^0.1.1",
     "d3": "^4.4.0",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
@@ -28,7 +29,8 @@
     "method-override": "^2.3.7",
     "mongodb": "^2.2.11",
     "mongoose": "^4.7.0",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2"
   },
   "devDependencies": {}
 }
